[project]
name = "jetson-nano-kvm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bash-kernel>=0.10.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.1",
    "jupyterlab-git>=0.51.1",
    "nbconvert>=7.16.6",
    "notebook>=7.4.1",
]

[tool.uv.workspace]
members = ["packages/*"]
